pop up overflow bug fix

--- a/src/css/components/InfoPopUp.css
+++ b/src/css/components/InfoPopUp.css
@@ -1,7 +1,3 @@
-.infoPopUpContainer {
-/*    visibility: hidden;*/
-}
-
 .infoPopUp_background {
 	position: fixed;
     top: 0;
@@ -35,7 +31,21 @@
     color: firebrick;
 }
 
-.infoPopUp-returnToMap { flex-flow: row wrap; }
+.infoPopUp-musicAttribution {
+    max-height: 100vh;
+    overflow-y: scroll;
+}
+
+.infoPopUp-musicAttribution::-webkit-scrollbar {
+    background:inherit;
+    width: 5px;
+    border: .5px black solid;
+}
+
+.infoPopUp-musicAttribution::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, .5);
+    border-radius: 10px;
+}
 
 .infoPopUp_btn {
     font-size: 1.25rem;
